--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,7 @@ jobs:
   publish:
     name: Build and publish to NuGet
     runs-on: ubuntu-latest
+    environment: "nuget:Shegox.test.package"
 
     permissions:
       contents: read
@@ -59,7 +60,7 @@ jobs:
         uses: NuGet/login@v1
         id: nuget-login
         with:
-          user: ${{ secrets.NUGET_USER }}
+          user: tobias-test-org
 
       - name: Push to NuGet
         if: ${{ !inputs.dry-run }}
